--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STT Cipasung</title>
-    <link rel="stylesheet" href="style.css">
+    <title>STT Cipasung - Home</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+    <!-- Navigation or header section -->
     <header>
-        <div class="navbar">
-            <h1>STT CIPASUNG</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">Profil</a></li>
-                    <li><a href="#">Fasilitas</a></li>
-                    <li><a href="#">Layanan</a></li>
-                    <li><a href="#">Tautan</a></li>
-                    <li><a href="#">PMB Online</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/fasilitas.html">Fasilitas</a></li>
+                <li><a href="pages/profil.html">Profil</a></li>
+                <li><a href="#">Layanan</a></li>
+                <li><a href="#">Kontak</a></li>
+                <!-- Add other links as necessary -->
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section class="course">
-            <h2>Teknik Industri</h2>
-            <img src="industry.jpg" alt="Teknik Industri">
-            <p>Teknik Industri adalah suatu teknik yang mencakup bidang desain, perbaikan, dan pemasangan dari sistem integrasi...</p>
-            <a href="#" class="button">selengkapnya</a>
-        </section>
-        <section class="course">
-            <h2>Informatika</h2>
-            <img src="informatics.jpg" alt="Informatika">
-            <p>Di Jurusan Informatika kamu akan mempelajari berbagai prinsip terkait ilmu komputer, mulai dari proses perancangan...</p>
-            <a href="#" class="button">selengkapnya</a>
-        </section>
-    </main>
+
+    <!-- Content of the home page -->
+    <section id="hero">
+        <h1>Welcome to STT Cipasung</h1>
+        <p>Higher Education For All</p>
+    </section>
+
+    <!-- Footer or other sections -->
     <footer>
-        <p>sekolah tinggi teknologi cipasung &copy; All Rights Reserved</p>
+        <p>&copy; 2024 STT Cipasung. All Rights Reserved.</p>
     </footer>
+
+    <!-- Link to the external JS file -->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
