--- a/pages/profil.html
+++ b/pages/profil.html
@@ -22,7 +22,7 @@
             <!-- Image at the top -->
             <div class="row justify-content-center mb-4">
                 <div class="col-md-8">
-                    <img src="../assets/images/top-image.jpg" class="img-fluid rounded" alt="STT Cipasung Main Building">
+                    <img src="../assets/images/sttc.png" class="img-fluid rounded" alt="STT Cipasung Main Building">
                 </div>
             </div>
 
@@ -42,10 +42,10 @@
             <!-- Images at the bottom -->
             <div class="row justify-content-center mt-4">
                 <div class="col-md-6">
-                    <img src="../assets/images/bottom-image1.jpg" class="img-fluid rounded mb-3" alt="STT Cipasung Building">
+                    <img src="../assets/images/sttc.png" class="img-fluid rounded mb-3" alt="STT Cipasung Building">
                 </div>
                 <div class="col-md-6">
-                    <img src="../assets/images/bottom-image2.jpg" class="img-fluid rounded" alt="STT Cipasung Students">
+                    <img src="../assets/images/sttc.png" class="img-fluid rounded" alt="STT Cipasung Students">
                 </div>
             </div>
         </div>
