--- a/pages/fasilitas.html
+++ b/pages/fasilitas.html
@@ -22,7 +22,7 @@
             <!-- Facility 1: Perpustakaan -->
             <div class="row mb-4">
                 <div class="col-md-6">
-                    <img src="../assets/images/perpustakaan.jpg" class="img-fluid rounded" alt="Perpustakaan">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Perpustakaan">
                 </div>
                 <div class="col-md-6">
                     <h3>Perpustakaan</h3>
@@ -36,7 +36,7 @@
             <!-- Facility 2: Masjid -->
             <div class="row mb-4">
                 <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/masjid.jpg" class="img-fluid rounded" alt="Masjid">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Masjid">
                 </div>
                 <div class="col-md-6 order-md-1">
                     <h3>Masjid</h3>
@@ -50,7 +50,7 @@
             <!-- Facility 3: Kantin -->
             <div class="row mb-4">
                 <div class="col-md-6">
-                    <img src="../assets/images/kantin.jpg" class="img-fluid rounded" alt="Kantin">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Kantin">
                 </div>
                 <div class="col-md-6">
                     <h3>Kantin</h3>
@@ -63,7 +63,7 @@
             <!-- Facility 4: Laboratorium Komputer -->
             <div class="row mb-4">
                 <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/laboratorium-komputer.jpg" class="img-fluid rounded" alt="Laboratorium Komputer">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Laboratorium Komputer">
                 </div>
                 <div class="col-md-6 order-md-1">
                     <h3>Laboratorium Komputer</h3>
@@ -76,7 +76,7 @@
             <!-- Facility 5: Aula -->
             <div class="row mb-4">
                 <div class="col-md-6">
-                    <img src="../assets/images/aula.jpg" class="img-fluid rounded" alt="Aula">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Aula">
                 </div>
                 <div class="col-md-6">
                     <h3>Aula</h3>
@@ -89,7 +89,7 @@
             <!-- Facility 6: Ruang Kelas -->
             <div class="row mb-4">
                 <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/ruang-kelas.jpg" class="img-fluid rounded" alt="Ruang Kelas">
+                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Ruang Kelas">
                 </div>
                 <div class="col-md-6 order-md-1">
                     <h3>Ruang Kelas</h3>
