--- a/index.html
+++ b/index.html
@@ -4,37 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STT Cipasung - Home</title>
-    <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-    <!-- Navigation or header section -->
+    <!-- Header and Navigation -->
     <header>
         <nav>
-            <ul>
+            <div class="logo">
+                <h1>STT Cipasung</h1>
+            </div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/fasilitas.html">Fasilitas</a></li>
                 <li><a href="pages/profil.html">Profil</a></li>
                 <li><a href="#">Layanan</a></li>
                 <li><a href="#">Kontak</a></li>
-                <!-- Add other links as necessary -->
             </ul>
         </nav>
     </header>
 
-    <!-- Content of the home page -->
+    <!-- Hero Section -->
     <section id="hero">
         <h1>Welcome to STT Cipasung</h1>
         <p>Higher Education For All</p>
     </section>
 
-    <!-- Footer or other sections -->
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 STT Cipasung. All Rights Reserved.</p>
     </footer>
 
-    <!-- Link to the external JS file -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
