--- a/pages/profil.html
+++ b/pages/profil.html
@@ -15,7 +15,7 @@
     <section id="profil" class="profil-section py-5">
         <div class="container">
             <!-- Section Title -->
-            <div class="text-center mb-4">
+            <div class="justify-content-center">
                 <h1 class="section-title">Profil</h1>
             </div>
 
@@ -30,24 +30,28 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <h2 class="school-name">STT Cipasung</h2>
-                    <p><strong>Tahun Berdiri:</strong> 1997</p>
+                    <h1><strong>Tahun Berdiri:</strong> 1997</h1>
                     <p class="profile-text">
                         Sekolah Tinggi Teknologi Cipasung (STT Cipasung) didirikan tahun 1997 dengan bantuan dari tim Institut Teknologi Bandung.
                         Sekolah tinggi ini hadir untuk menjawab tantangan dalam penyediaan tenaga ahli di bidang keteknikan,
                         yang sangat dibutuhkan oleh masyarakat sekitar pesantren dan daerah yang sebelumnya kurang mendapatkan perhatian.
+                        
                     </p>
                 </div>
             </div>
 
             <!-- Images at the bottom -->
-            <div class="row justify-content-center mt-4">
-                <div class="col-md-6">
+            <div id="img" class="container">
+                <div class="row">
+                  <div class="col">
                     <img src="../assets/images/sttc.png" class="img-fluid rounded mb-3" alt="STT Cipasung Building">
-                </div>
-                <div class="col-md-6">
-                    <img src="../assets/images/sttc.png" class="img-fluid rounded" alt="STT Cipasung Students">
+                  </div>
+                  <div class="col">
+                    <img src="../assets/images/sttc.png" class="img-fluid rounded mb-3" alt="STT Cipasung Building">
+                  </div>
                 </div>
             </div>
+
         </div>
     </section>
 
