--- a/pages/fasilitas.html
+++ b/pages/fasilitas.html
@@ -4,106 +4,117 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STT Cipasung - Fasilitas</title>
-    <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <!-- Link to Bootstrap 5.3 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        .facility-card {
+            background-color: #f8f9fa; /* Latar belakang terang untuk kartu fasilitas */
+            border-radius: 0.5rem; /* Sudut melingkar */
+            padding: 70px; /* Jarak di sekitar kartu, ditambah sedikit */
+            margin-bottom: 20px; /* Ruang antara kartu */
+            display: flex; /* Tata letak fleksibel */
+            align-items: center; /* Pusatkan item secara vertikal */
+            width: 999px; /* Atur lebar kartu menjadi lebih besar */
+            height: 500px; /* Atur tinggi kartu menjadi lebih besar */
+        }
+        .facility-card img {
+            max-width: 600px; /* Batasi lebar gambar menjadi lebih besar */
+            margin: 0 20px; /* Jarak antara gambar dan teks */
+            border-radius: 0.5rem; /* Sudut melingkar untuk gambar */
+        }
+        .text-container {
+            flex-grow: 1; /* Biarkan kontainer teks mengembang */
+        }
+        .facility-card h3 {
+            margin: 0; /* Hapus margin dari judul */
+        }
+    </style>
+    
 </head>
 <body>
 
-    <!-- Navigation or header goes here -->
+    <div class="container py-5">
+        <div class="text-center mb-4">
+            <h1 class="section-title">Fasilitas</h1>
+        </div>
 
-    <!-- Fasilitas Section -->
-    <section id="fasilitas" class="fasilitas-section py-5">
-        <div class="container">
-            <!-- Section Title -->
-            <div class="text-center mb-4">
-                <h1 class="section-title">Fasilitas</h1>
-            </div>
-
-            <!-- Facility 1: Perpustakaan -->
-            <div class="row mb-4">
-                <div class="col-md-6">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Perpustakaan">
-                </div>
-                <div class="col-md-6">
-                    <h3>Perpustakaan</h3>
-                    <p>
-                        Salah satu fasilitas pendukung pembelajaran di Kampus Sekolah Tinggi Teknologi Cipasung adalah perpustakaan. 
-                        Kami menyediakan koleksi buku yang cukup lengkap dari berbagai disiplin ilmu, khususnya Teknik Industri dan Informatika.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Facility 2: Masjid -->
-            <div class="row mb-4">
-                <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Masjid">
-                </div>
-                <div class="col-md-6 order-md-1">
-                    <h3>Masjid</h3>
-                    <p>
-                        Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-                        para mahasiswa dan staf, terutama untuk salat lima waktu.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Facility 3: Kantin -->
-            <div class="row mb-4">
-                <div class="col-md-6">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Kantin">
-                </div>
-                <div class="col-md-6">
-                    <h3>Kantin</h3>
-                    <p>
-                        Menyediakan makanan dan minuman yang sehat dan terjangkau, kantin menjadi tempat favorit mahasiswa untuk beristirahat dan bersosialisasi.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Facility 4: Laboratorium Komputer -->
-            <div class="row mb-4">
-                <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Laboratorium Komputer">
-                </div>
-                <div class="col-md-6 order-md-1">
-                    <h3>Laboratorium Komputer</h3>
-                    <p>
-                        STT Cipasung memiliki beberapa laboratorium komputer yang dilengkapi dengan perangkat keras dan lunak terbaru, mendukung proses belajar mahasiswa di bidang teknologi.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Facility 5: Aula -->
-            <div class="row mb-4">
-                <div class="col-md-6">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Aula">
-                </div>
-                <div class="col-md-6">
-                    <h3>Aula</h3>
-                    <p>
-                        Aula besar yang digunakan untuk berbagai kegiatan akademik dan non-akademik, seperti seminar, workshop, dan kegiatan organisasi mahasiswa.
-                    </p>
-                </div>
-            </div>
-
-            <!-- Facility 6: Ruang Kelas -->
-            <div class="row mb-4">
-                <div class="col-md-6 order-md-2">
-                    <img src="../assets/images/bb.jpg" class="img-fluid rounded" alt="Ruang Kelas">
-                </div>
-                <div class="col-md-6 order-md-1">
-                    <h3>Ruang Kelas</h3>
-                    <p>
-                        Ruang kelas dilengkapi dengan fasilitas modern dan nyaman, menciptakan suasana belajar yang kondusif dan mendukung partisipasi aktif mahasiswa.
-                    </p>
-                </div>
+        <!-- Facility 1: Perpustakaan -->
+        <div class="facility-card">
+            <img src="../assets/images/bb.jpg" alt="Perpustakaan">
+            <div class="text-container">
+                <h3>Perpustakaan</h3>
+                <p>
+                    Salah satu fasilitas pendukung pembelajaran di Kampus Sekolah Tinggi Teknologi Cipasung adalah perpustakaan. 
+                    Kami menyediakan koleksi buku yang cukup lengkap dari berbagai disiplin ilmu, khususnya Teknik Industri dan Informatika.
+                    Salah satu fasilitas pendukung pembelajaran di Kampus Sekolah Tinggi Teknologi Cipasung adalah perpustakaan. 
+                    Kami menyediakan koleksi buku yang cukup lengkap dari berbagai disiplin ilmu, khususnya Teknik Industri dan Informatika.
+                    Salah satu fasilitas pendukung pembelajaran di Kampus Sekolah Tinggi Teknologi Cipasung adalah perpustakaan. 
+                    Kami menyediakan koleksi buku yang cukup lengkap dari berbagai disiplin ilmu, khususnya Teknik Industri dan Informatika.
+                    Salah satu fasilitas pendukung pembelajaran di Kampus Sekolah Tinggi Teknologi Cipasung adalah perpustakaan. 
+                    Kami menyediakan koleksi buku yang cukup lengkap dari berbagai disiplin ilmu, khususnya Teknik Industri dan Informatika.
+                </p>
             </div>
         </div>
-    </section>
 
-    <!-- Footer or other sections -->
+        <!-- Facility 2: Masjid -->
+        <div class="facility-card flex-row-reverse">
+            <img src="../assets/images/bb.jpg" alt="Masjid">
+            <div class="text-container">
+                <h3>Masjid</h3>
+                <p>
+                    Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
+                    para mahasiswa dan staf, terutama untuk salat lima waktu.
+                </p>
+            </div>
+        </div>
 
-    <!-- Link to the external JS file -->
-    <script src="../assets/js/script.js"></script>
+        <!-- Facility 3: Kantin -->
+        <div class="facility-card">
+            <img src="../assets/images/bb.jpg" alt="Kantin">
+            <div class="text-container">
+                <h3>Kantin</h3>
+                <p>
+                    Menyediakan makanan dan minuman yang sehat dan terjangkau, kantin menjadi tempat favorit mahasiswa untuk beristirahat dan bersosialisasi.
+                </p>
+            </div>
+        </div>
+
+        <!-- Facility 4: Laboratorium Komputer -->
+        <div class="facility-card flex-row-reverse">
+            <img src="../assets/images/bb.jpg" alt="Laboratorium Komputer">
+            <div class="text-container">
+                <h3>Laboratorium Komputer</h3>
+                <p>
+                    STT Cipasung memiliki beberapa laboratorium komputer yang dilengkapi dengan perangkat keras dan lunak terbaru, mendukung proses belajar mahasiswa di bidang teknologi.
+                </p>
+            </div>
+        </div>
+
+        <!-- Facility 5: Aula -->
+        <div class="facility-card">
+            <img src="../assets/images/bb.jpg" alt="Aula">
+            <div class="text-container">
+                <h3>Aula</h3>
+                <p>
+                    Aula besar yang digunakan untuk berbagai kegiatan akademik dan non-akademik, seperti seminar, workshop, dan kegiatan organisasi mahasiswa.
+                </p>
+            </div>
+        </div>
+
+        <!-- Facility 6: Ruang Kelas -->
+        <div class="facility-card flex-row-reverse">
+            <img src="../assets/images/bb.jpg" alt="Ruang Kelas">
+            <div class="text-container">
+                <h3>Ruang Kelas</h3>
+                <p>
+                    Ruang kelas dilengkapi dengan fasilitas modern dan nyaman, menciptakan suasana belajar yang kondusif dan mendukung partisipasi aktif mahasiswa.
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
