--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STT Cipasung - Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header and Navigation -->
-    <header>
-        <nav>
-            <div class="logo">
-                <h1>STT Cipasung</h1>
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="../assets/images/logo.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+              </a>
+              <a class="navbar-brand" href="#">STTCIPASUNG</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/profil.html">profil</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/fasilitas.html">fasilitas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Kontak</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="menu-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/fasilitas.html">Fasilitas</a></li>
-                <li><a href="pages/profil.html">Profil</a></li>
-                <li><a href="#">Layanan</a></li>
-                <li><a href="#">Kontak</a></li>
-            </ul>
         </nav>
     </header>
 
@@ -40,5 +51,6 @@
     </footer>
 
     <script src="assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
