--- a/pages/profil.html
+++ b/pages/profil.html
@@ -6,6 +6,7 @@
     <title>STT Cipasung - Profil</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/profil.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
         <div class="container">
             <!-- Section Title -->
             <div class="justify-content-center">
-                <h1 class="section-title">Profil</h1>
+                <h2>Profil</h2>
             </div>
 
             <!-- Image at the top -->
@@ -30,7 +31,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <h2 class="school-name">STT Cipasung</h2>
-                    <h1><strong>Tahun Berdiri:</strong> 1997</h1>
+                    <h2>Tahun Berdiri: 1997</h2>
                     <p class="profile-text">
                         Sekolah Tinggi Teknologi Cipasung (STT Cipasung) didirikan tahun 1997 dengan bantuan dari tim Institut Teknologi Bandung.
                         Sekolah tinggi ini hadir untuk menjawab tantangan dalam penyediaan tenaga ahli di bidang keteknikan,
@@ -56,6 +57,9 @@
     </section>
 
     <!-- Footer or other sections -->
+    <footer>
+        <p>&copy; 2024 STT Cipasung. All Rights Reserved.</p>
+    </footer>
 
     <!-- Link to the external JS file -->
     <script src="../assets/js/script.js"></script>
