--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STT Cipasung - Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -13,9 +14,9 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="../assets/images/logo.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-top">
+                <img src="../assets/images/sttclogo.png" alt="Logo"class="d-inline-block align-text-top">
               </a>
-              <a class="navbar-brand" href="#">STTCIPASUNG</a>
+              
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -25,13 +26,19 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/profil.html">profil</a>
+                    <a class="nav-link" href="../pages/profil.html">Profil</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/fasilitas.html">fasilitas</a>
+                    <a class="nav-link" href="../pages/fasilitas.html">Fasilitas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Kontak</a>
+                    <a class="nav-link" href="../pages/Jurusan.html">Jurusan</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/Alumni.html">Alumni</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/Kontak.html">Kontak</a>
                   </li>
                 </ul>
               </div>
