--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header and Navigation -->
@@ -41,6 +43,16 @@
                     <a class="nav-link" href="../pages/Kontak.html">Kontak</a>
                   </li>
                 </ul>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                    Bahasa
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-lg-end">
+                    <li><button class="dropdown-item" type="button">Indonesia</button></li>
+                    <li><button class="dropdown-item" type="button">Inggris</button></li>
+                    <li><button class="dropdown-item" type="button">Nazi</button></li>
+                  </ul>
+                </div>
               </div>
             </div>
         </nav>
