add fitur login

--- a/pages/fasilitas.html
+++ b/pages/fasilitas.html
@@ -31,7 +31,7 @@
           <h3>Masjid</h3>
           <p>
             Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-            para mahasiswa dan staf, terutama untuk salat lima waktu.
+            para mahasiswa dan staf, terutama untuk salat lima waktu. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas necessitatibus quod quis, totam rerum quae, quos odio, consectetur exercitationem nobis accusamus! Rem praesentium dignissimos pariatur sapiente minus! Sapiente, ab blanditiis.
           </p>
         </div>
         <img src="../assets/images/sttc.png" alt="Masjid">
@@ -42,7 +42,7 @@
           <h3>Masjid</h3>
           <p>
             Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-            para mahasiswa dan staf, terutama untuk salat lima waktu.
+            para mahasiswa dan staf, terutama untuk salat lima waktu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam sit iste veritatis rerum est voluptatibus repudiandae modi necessitatibus exercitationem! Magni totam ut sit molestias expedita illum consequatur veniam laboriosam?
           </p>
         </div>
     </div>
@@ -51,7 +51,7 @@
           <h3>Masjid</h3>
           <p>
             Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-            para mahasiswa dan staf, terutama untuk salat lima waktu.
+            para mahasiswa dan staf, terutama untuk salat lima waktu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae deserunt, iusto reprehenderit, in quod culpa quisquam, rem voluptatem rerum obcaecati architecto molestiae quam ducimus voluptatibus odio libero? Cupiditate, neque? At!
           </p>
         </div>
         <img src="../assets/images/sttc.png" alt="Masjid">
@@ -62,7 +62,7 @@
           <h3>Masjid</h3>
           <p>
             Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-            para mahasiswa dan staf, terutama untuk salat lima waktu.
+            para mahasiswa dan staf, terutama untuk salat lima waktu. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos mollitia magni dolorem sequi repudiandae necessitatibus nulla, numquam, vel facilis nemo nesciunt, porro repellat eius error itaque nobis. Ea, deserunt accusantium!
           </p>
         </div>
     </div>
@@ -71,7 +71,7 @@
           <h3>Masjid</h3>
           <p>
             Fasilitas tempat ibadah yang tersedia di Kampus Sekolah Tinggi Teknologi Cipasung untuk memenuhi kebutuhan spiritual 
-            para mahasiswa dan staf, terutama untuk salat lima waktu.
+            para mahasiswa dan staf, terutama untuk salat lima waktu. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat consequuntur odio deleniti, exercitationem, distinctio fugiat ducimus fugit ratione rerum architecto autem! Officia quam cumque commodi. Nulla laudantium sunt dolorum. Harum!
           </p>
         </div>
         <img src="../assets/images/sttc.png" alt="Masjid">
