--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/Kontak.html">Kontak</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/login.html">Login</a>
+                  </li>
                 </ul>
                 <div class="btn-group">
                   <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
