--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="password" name="password" placeholder="Masukkan password" required>
               </div>
-              <button type="submit" class="btn btn-custom w-100">Login</button>
+              <button type="submit" class="btn btn-custom w-100"onclick="window.location.href='dass.html';">Login</button>
               <div class="forgot-password">
                 <a href="../pages/lupa.html">Lupa password?</a>
               </div>
