--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
 <body>
     <section>
         <div class="login-container">
-            <h2 class="login-title">Login SEVIMA</h2>
+            <h1 class="login-title">Login sevima</h1>
             <form action="/login" method="POST">
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
