--- a/pages/profil.html
+++ b/pages/profil.html
@@ -17,7 +17,7 @@
         <div class="container">
             <!-- Section Title -->
             <div class="justify-content-center">
-                <h2>Profil</h2>
+                <h1>Profil</h1>
             </div>
 
             <!-- Image at the top -->
@@ -28,10 +28,10 @@
             </div>
 
             <!-- Profile Details -->
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mypp">
                 <div class="col-md-8 text-center">
-                    <h2 class="school-name">STT Cipasung</h2>
-                    <h2>Tahun Berdiri: 1997</h2>
+                    <h1 class="school-name">STT Cipasung</h1>
+                    <h1>Tahun Berdiri: 1997</h1>
                     <p class="profile-text">
                         Sekolah Tinggi Teknologi Cipasung (STT Cipasung) didirikan tahun 1997 dengan bantuan dari tim Institut Teknologi Bandung.
                         Sekolah tinggi ini hadir untuk menjawab tantangan dalam penyediaan tenaga ahli di bidang keteknikan,
