--- a/pages/dass.html
+++ b/pages/dass.html
@@ -29,10 +29,10 @@
       <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
         <div class="position-sticky pt-3">
           <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="#">Data Mahasiswa</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Data Dosen</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Jadwal Kuliah</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Jumlan Beasiswa</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/data_mahasiswa.html">Data Mahasiswa</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/data_dosen.html">Data Dosen</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/matkul.html">Jadwal Kuliah</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/beasiswa.html">Jumlan Beasiswa</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Berita Kampus</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Event Kampus</a></li>
           </ul>
@@ -103,6 +103,7 @@
             <canvas id="visitorChart"></canvas>
           </div>
         </div>
+        <h3>Data Mahasiswa Baru</h3>
         <table class="table table-striped">
         <thead>
           <tr>
