--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 </head>
 <body>
-    <!-- Header and Navigation -->
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -38,6 +37,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/Alumni.html">Alumni</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/berita.html">Berita</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/Kontak.html">Kontak</a>
